# wait-rs

./: .markdownlint.jsonc  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: auto-assign.yml  ci.yml
examples/: basic.rs  when_tokio_is_required.rs
src/: lib.rs
